devops/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pisae
  labels:
    project: rattrapage-pi
