devops/k8s/03-userpi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userpi
  namespace: pisae
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userpi
  template:
    metadata:
      labels:
        app: userpi
    spec:
      containers:
        - name: userpi
          image: mahdimasmoudi/userpi:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 25
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 35
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: userpi
  namespace: pisae
spec:
  selector:
    app: userpi
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
