devops/k8s/04-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: picloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: <ton-dockerhub-user>/api-gateway:latest
          ports:
            - containerPort: 8091
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8091
            initialDelaySeconds: 25
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8091
            initialDelaySeconds: 35
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: picloud
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8091
      targetPort: 8091
  type: ClusterIP
